# dede

./: .gitignore  README.md  perf_viz_updated.ipynb  pyproject.toml  setup.py
benchmarks/: 128core.csv  16core.csv  32core.csv  64core.csv  64core.txt  8core.csv  benchmark_viz.ipynb  bootstrap_machines.sh  cvxpy_dede_comparison.ipynb  dede_benchmark.py  distributed_tests.py  distributed_tests_cvxpy.py  divergence_case1_unconstrained.py  divergence_case2_same_group.py  divergence_case3_different_group.py  divergence_case4_constant_term.py  first_half_distributed.csv  first_half_distributed_original.txt  group_objectives_log.csv  group_objectives_log.txt  parse_benchmark_log.py  profile.txt  profile_workers.py
dede/: __init__.py  constraints_func.py  constraints_utils.py  problem.py  subproblem.py  subproblems_wrap.py  utils.py
dede.egg-info/: PKG-INFO
examples/: README.md  environment.yml
plots/: plot_sum.py  test.py  time_log.py  time_sum.py  time_weighted.py  timing_unweighted_sum.txt  timing_weighted_sum.txt
tests/: conftest.py  test.py  test_adaptive.py  test_break_expr.py  test_break_expr_run.py  test_breakdown.py  test_cvx_cont.py  test_cvx_int.py  test_cvx_mix.py  test_dede.py  test_failed.py  test_ilp.py  test_lin_cont.py  test_lin_int.py  test_lin_mix.py  test_lin_prog.py  test_lp.py  test_matrix.py  test_milp.py  test_solution.py  tests_suvan.py
tmp_tests/: 16core.txt  1core.txt  4core.csv  benchmark_log.csv  benchmark_log2.csv  benchmark_log2.txt  benchmark_viz.ipynb  bootstrap_machines.sh  cvxpy_dede_comparison.ipynb  distributed_log.csv  (+7 more)
(+96 files in other folders)
